# cpptest

./: .conanignore  .dockerignore  .gitignore  Dockerfile  README.md  conanfile.py
.github/workflows/: docker-image.yml  integration-tests.yml
src/: some.cpp
templates/command/new/dv/: README.md
templates/command/new/dv/cpptest/: .gitignore
templates/command/new/dv/cpptest/include/: {{name}}.h
templates/command/new/dv/cpptest/src/: {{name}}.cpp
templates/command/new/dv_cpptest/: .conanignore  CMakeLists.txt  README.md  conanfile.py
templates/command/new/dv_cpptest/.github/workflows/: unit-tests.yml
templates/command/new/dv_cpptest/include/: some.h  {{name}}.h
templates/command/new/dv_cpptest/src/: some.cpp
templates/command/new/dv_cpptest/tests/unit/: CMakeLists.txt  factorial_test.cpp
tests/: integration.py
tests/unit/: CMakeLists.txt
